<resources>
    <string name="app_name">Q for Care</string>
    <string name="title_activity_testmain2">testmain2</string>
    <string name="title_activity_minimenu">Minimenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_miniinapp">Miniinapp</string>
    <string name="title_activity_manage">Manage</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_setting">Setting</string>
    <string name="splash">กำลังเข้าสู่ระบบ...</string>
    <string name="citizenId">หมายเลขประจำตัวประชาชน</string>
    <string name="nurse">พยาบาล</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="walkin">จองคิว</string>
    <string name="out_patient">จองคิวผู้ป่วยนอก</string>
    <string name="in_patient_reserve">จองคิวผู้ป่วยใน</string>
    <string name="setting">ตั้งค่า</string>
    <string name="in_patient">ผู้ป่วยใน</string>
    <string name="process">กำลังโหลดข้อมูล...</string>
    <string name="reset">รีเซ็ตข้อมูลเป็นค่าเริ่มต้น</string>
    <string name="reset_text">คืนค่าเริ่มต้นฐานข้อมูล</string>
    <string name="logout">ออกจากระบบ</string>
</resources>
