<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/in_patient">
        <menu>
            <item
                android:id="@+id/nav_phone"
                android:icon="@drawable/ic_030_technology_1"
                android:title="จองคิวผ่านแอปพลิเคชัน" />
        </menu>
    </item>
    <item android:title="@string/nurse">
        <menu>
            <item
                android:id="@+id/nav_walk"
                android:icon="@drawable/ic_walk"
                android:title="@string/out_patient" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_007_loudspeaker"
                android:title="เรียกคิวผู้ป่วย" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_003_interface"
                android:title="@string/setting" />
        </menu>
    </item>
    <item android:title="@string/logout">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_004_exit"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>